--- a/TravelProject/src/main/webapp/resources/table_template/css/main.css
+++ b/TravelProject/src/main/webapp/resources/table_template/css/main.css
@@ -137,7 +137,7 @@ iframe {
 
 .limiter {
   /*width: 1366px;*/
-  width: 1800px;
+  width: 100%;
   margin: 0 auto;
 }
 
@@ -146,6 +146,7 @@ iframe {
   min-height: 100vh;
   background: #fff;
 
+  height: 1100px;
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
@@ -158,12 +159,14 @@ iframe {
 }
 
 .wrap-table100 {
-  width: 2000px;
+  height: 1100px;
+  width: 100%;
 }
 
 /*//////////////////////////////////////////////////////////////////
 [ Table ]*/
 .table100 {
+  height:800px;
   background-color: #fff;
 }
 
@@ -179,26 +182,32 @@ th, td {
 .column1 {
   width: 33%;
   padding-left: 40px;
+  font-size: 5px;
 }
 
 .column2 {
   width: 13%;
+  font-size: 5px;
 }
 
 .column3 {
   width: 22%;
+  font-size: 5px;
 }
 
 .column4 {
   width: 19%;
+  font-size: 5px;
 }
 
 .column5 {
   width: 13%;
+  font-size: 5px;
 }
 
 .column6 {
   width: 3%;
+  font-size: 5px;
 }
 
 .table100-head th {
@@ -226,7 +235,8 @@ th, td {
 }
 
 .table100-body {
-  max-height: 585px;
+  /*max-height: 585px;*/
+  max-height: 730px;
   overflow: auto;
 }
 
